[package]
name = "can-starter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false
# NOTE:
# - In starter / development mode, we fully disable the build script
#   so we don't depend on `dbcparser` and a local DBC file.
# - For a "production" setup (automatic code generation from DBC),
#   comment out the next line and uncomment `build = "build.rs"` below.
build = false
#build = "build.rs"

# NOTE:
# - Enable this section only when using `build.rs` to generate Rust code
#   from the DBC file at build time.
# - Requires the `canforge-rs` workspace to be available at the given path.
#[build-dependencies]
#dbcparser = { git = "https://github.com/redpesk-common/canforge-rs.git", branch = "master" }

[dependencies]
serde = { version = "1", features = ["derive"], optional = true  }
serde_json = {version= "1", optional = true }
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
sockcan_binding = { git = "https://github.com/redpesk-common/canbus-core-binding-rs.git", branch = "master" }
sockcan_data    = { git = "https://github.com/redpesk-common/canbus-core-binding-rs.git", branch = "master" }
dbcapi          = { git = "https://github.com/redpesk-common/canbus-core-binding-rs.git", branch = "master" }
lib_sockcan     = { git = "https://github.com/redpesk-common/canbus-core-rs.git", branch = "master" }
afbv4           = { git = "https://github.com/redpesk-common/afb-librust.git", branch = "master" }

[lib]
name = "afb_starter"
crate-type = ["cdylib"]
path = "src/starter.rs"

[features]
default = ["serde","serde_json"]
